[tool.poetry]
name = "initer"
version = "0.1.0"
description = ""
authors = ["nulladmin1 <shrey.deogade@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


requests = "^2.32.3"
pyyaml = "^6.0.2"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
initer = "initer.main:main"
